ZIO 2.0.0 compat